--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" type="text/css" href="/output.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
   <link rel="stylesheet" href="/styles.css">
@@ -13,12 +14,13 @@
 <body>
   <div class="login-container">
       <a id="login" 
-         href="https://discord.com/oauth2/authorize?client_id=1444041775495778398&response_type=token&redirect_uri=http%3A%2F%2Flocalhost%3A53134%2Fauth%2Fdiscord&scope=identify"
+         href="https://discord.com/oauth2/authorize?client_id=1444041775495778398&response_type=token&redirect_uri=https%3A%2F%2Fxmas-gameshow-live.onrender.com%2Fauth%2Fdiscord&scope=identify"
          class="login-button">
           <i class="fa-brands fa-discord fa-2x"></i>
           <span>Login with Discord</span>
       </a>
   </div>
-  <script src="snow.js"></script>
+
+  <script src="/snow.js" defer></script>
 </body>
 </html>
