--- a/index.html
+++ b/index.html
@@ -12,9 +12,23 @@
 </head>
 
 <body>
+  <!-- Settings Button -->
+  <button id="settings-toggle-btn" class="settings-button">
+    <i class="fas fa-cog"></i>
+  </button>
+
+  <!-- Settings Panel -->
+  <div id="settings-panel" class="settings-panel">
+    <h3>Theme Settings</h3>
+    <div class="theme-selector">
+        <button id="theme-warm-btn">Warm Theme</button>
+        <button id="theme-cold-btn">Cold Theme</button>
+    </div>
+  </div>
+    
   <div class="login-container">
       <a id="login" 
-         href="https://discord.com/oauth2/authorize?client_id=1444041775495778398&response_type=token&redirect_uri=https%3A%2F%2Fxmas-gameshow-live.onrender.com%2Fauth%2Fdiscord&scope=identify"
+         href="https://discord.com/oauth2/authorize?client_id=1444041775495778398&response_type=token&redirect_uri=http%3A%2F%2Flocalhost%3A53134%2Fauth%2Fdiscord&scope=identify"
          class="login-button">
           <i class="fa-brands fa-discord fa-2x"></i>
           <span>Login with Discord</span>
@@ -22,5 +36,6 @@
   </div>
 
   <script src="/snow.js" defer></script>
+  <script src="/theme.js" defer></script>
 </body>
 </html>
