--- a/dashboard.html
+++ b/dashboard.html
@@ -65,6 +65,8 @@
       </div>
   </div>
 
+  <!-- Socket.IO is required by auth.js -->
+  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
   <script src="/auth.js" defer></script>
   <script src="/snow.js" defer></script>
   <script src="/theme.js" defer></script>
