Add application logo to lobby page
Added application logo to the lobby interface.

--- a/dashboard.html
+++ b/dashboard.html
@@ -27,6 +27,8 @@
   </div>
     
   <div class="lobby-container">
+      <!-- Application Logo - Source will be set by theme.js -->
+      <img id="app-logo" src="/logo-warm.svg" alt="App Logo" class="app-logo-image" />
       
       <div class="user-section">
           <img src="" id="avatar" class="avatar-image"/>
