--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
   <div class="login-container">
       <a id="login" 
-         href="https://discord.com/oauth2/authorize?client_id=1444041775495778398&response_type=token&redirect_uri=https%3A%2F%2Fxmas-gameshow-live.onrender.com%2Fauth%"
+         href="https://discord.com/oauth2/authorize?client_id=1444041775495778398&response_type=token&redirect_uri=https%3A%2F%2Fxmas-gameshow-live.onrender.com%2Fauth%2Fdiscord&scope=identify"
          class="login-button">
           <i class="fa-brands fa-discord fa-2x"></i>
           <span>Login with Discord</span>
@@ -40,3 +40,4 @@
 </body>
 
 </html>
+
